corrections sur les formulaires, ajout des preferences dans le menu et ajout d'isotope dans le template

--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -90,6 +90,7 @@
                     </a>
                     <div class="collapse" id="administration">
                         <ul class="nav">
+                            <li><a href="{{  path('admin_options_general') }}">Préférences</a></li>
                             <li><a href="{{ path('admin_menutaxonomy') }}">Menus</a></li>
                             <li><a href="{{ path('admin_users') }}">Utilisateurs</a></li>
                             <li><a href="{{ path('admin_themes') }}">Thèmes</a></li>
