--- a/src/CMS/Bundle/ContentBundle/Resources/views/Category/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Category/edit.html.twig
@@ -29,6 +29,7 @@
                     <ul class="list-unstyled">
                         <li>Date: {{ entity.created|date('d/m/Y H:i:s') }}</li>
                         <li>{{ form_row(edit_form.published) }}</li>
+                        <li><a href="{{ path('front_single', {'alias': entity.url}) }}" target="_blank">{{ 'cms.content.preview'|trans }}</a></li>
                         <li>{{ form_row(edit_form.parent) }}</li>
                         <li>{{ form_row(edit_form.ordre) }}</li>
                     </ul>
