--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -1,12 +1,15 @@
-{% extends 'bootstrap_3_layout.html.twig' %}
+{% use "form_div_layout.html.twig" %}
 
-{% block form_widget_simple %}
-    {{ parent() }}
+{% block form_widget_simple -%}
+    {% if type is not defined or type not in ['file', 'hidden'] %}
+        {%- set attr = attr|merge({class: (attr.class|default('') ~ ' form-control')|trim}) -%}
+    {% endif %}
+    {{- parent() -}}
 
     {% if help is defined %}
         <span class="help">{{ help|trans }}</span>
     {% endif %}
-{% endblock %}
+{%- endblock form_widget_simple %}
 
 {% block submit_row -%}
     {% spaceless %}
@@ -66,43 +69,44 @@
         <div {{ block('widget_container_attributes') }} class="form-group">
             {{- form_label(form) -}}
             <div class="clearfix"></div>
-            <div class="row">
-                <div class="media-link{% if image_size is defined %}{{ " " ~ image_size }}{% endif %}">
+            <div class="media-link{% if image_size is defined %}{{ " " ~ image_size }}{% endif %}">
+                {% if image_url is defined and image_url is not null %}
+                    <a href="javascript:" onclick="deleteMedia('#{{ id }}')" class="delete-media"
+                       data-target="#{{ id }}"><i class="fa fa-times-circle"></i></a>
+                {% endif %}
+                <a href="javascript:" data-media="true" data-toggle="modal" data-target="#{{ id }}_modal">
                     {% if image_url is defined and image_url is not null %}
-                        <a href="javascript:" onclick="deleteMedia('#{{ id }}')" class="delete-media" data-target="#{{ id }}"><i class="fa fa-times-circle"></i></a>
+                        <img src="{{ asset(image_url) }}" class="img-responsive"/>
+                    {% else %}
+                        <i class="fa fa-file-image-o fa-3"></i>
                     {% endif %}
-                    <a href="javascript:" data-media="true" data-toggle="modal" data-target="#{{ id }}_modal">
-                        {% if image_url is defined and image_url is not null %}
-                            <img src="{{ asset(image_url) }}" class="img-responsive" />
-                        {% else %}
-                            <i class="fa fa-file-image-o fa-3"></i>
-                        {% endif %}
-                    </a>
-                    {% if help is defined and help != '' %}
-                        <div class="clearfix"></div>
-                        <span class="help">{{ help|trans }}</span>
-                    {% endif %}
-                </div>
+                </a>
+                {% if help is defined and help != '' %}
+                    <div class="clearfix"></div>
+                    <span class="help">{{ help|trans }}</span>
+                {% endif %}
             </div>
             {% block modals %}
-            <input type="hidden" {{ block('widget_attributes') }} data-hidden="{{ id }}_modal" value="{{ value }}" />
-            <div class="modal fade media" id="{{ id }}_modal" tabindex="-1" role="dialog" aria-labelledby="{{id}}">
-                <div class="modal-dialog modal-large" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Médias</h4>
-                        </div>
-                        <div class="modal-body">
-                            <div class="col-md-9"></div>
-                            <div class="col-md-3 details">
-
+                <input type="hidden" {{ block('widget_attributes') }} data-hidden="{{ id }}_modal" value="{{ value }}"/>
+                <div class="modal fade media" id="{{ id }}_modal" tabindex="-1" role="dialog"
+                     aria-labelledby="{{ id }}">
+                    <div class="modal-dialog modal-large" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                            aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Médias</h4>
                             </div>
-                            <div class="clearfix"></div>
+                            <div class="modal-body">
+                                <div class="col-md-9"></div>
+                                <div class="col-md-3 details">
+
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             {% endblock modals %}
         </div>
         <div class="clearfix"></div>
@@ -118,7 +122,10 @@
                     <div class="col-md-3">{{ form_row(form.address) }}</div>
                     <div class="col-md-4">{{ form_row(form.latitude) }}</div>
                     <div class="col-md-4">{{ form_row(form.longitude) }}</div>
-                    <div class="col-md-1"><div class="form-group"><label class="form-label">&nbsp;</label><a href="javascript:codeAddress()" class="btn btn-fill form-control">OK</a></div></div>
+                    <div class="col-md-1">
+                        <div class="form-group"><label class="form-label">&nbsp;</label><a
+                                    href="javascript:codeAddress()" class="btn btn-fill form-control">OK</a></div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-12">
@@ -134,3 +141,240 @@
 
     {% endblock javascripts %}
 {% endblock map_widget %}
+
+{% use "form_div_layout.html.twig" %}
+
+{# Widgets #}
+
+
+
+{% block textarea_widget -%}
+    {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-control')|trim}) %}
+    {{- parent() -}}
+{%- endblock textarea_widget %}
+
+{% block button_widget -%}
+    {% set attr = attr|merge({class: (attr.class|default('btn-default') ~ ' btn')|trim}) %}
+    {{- parent() -}}
+{%- endblock %}
+
+{% block money_widget -%}
+    <div class="input-group">
+        {% set prepend = '{{' == money_pattern[0:2] %}
+        {% if not prepend %}
+            <span class="input-group-addon">{{ money_pattern|replace({ '{{ widget }}':''}) }}</span>
+        {% endif %}
+        {{- block('form_widget_simple') -}}
+        {% if prepend %}
+            <span class="input-group-addon">{{ money_pattern|replace({ '{{ widget }}':''}) }}</span>
+        {% endif %}
+    </div>
+{%- endblock money_widget %}
+
+{% block percent_widget -%}
+    <div class="input-group">
+        {{- block('form_widget_simple') -}}
+        <span class="input-group-addon">%</span>
+    </div>
+{%- endblock percent_widget %}
+
+{% block datetime_widget -%}
+    {% if widget == 'single_text' %}
+        {{- block('form_widget_simple') -}}
+    {% else -%}
+        {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-inline')|trim}) -%}
+        <div {{ block('widget_container_attributes') }}>
+            {{- form_errors(form.date) -}}
+            {{- form_errors(form.time) -}}
+            {{- form_widget(form.date, { datetime: true } ) -}}
+            {{- form_widget(form.time, { datetime: true } ) -}}
+        </div>
+    {%- endif %}
+{%- endblock datetime_widget %}
+
+{% block date_widget -%}
+    {% if widget == 'single_text' %}
+        {{- block('form_widget_simple') -}}
+    {% else -%}
+        {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-inline')|trim}) -%}
+        {% if datetime is not defined or not datetime -%}
+            <div {{ block('widget_container_attributes') -}}>
+        {%- endif %}
+        {{- date_pattern|replace({
+            '{{ year }}': form_widget(form.year),
+            '{{ month }}': form_widget(form.month),
+            '{{ day }}': form_widget(form.day),
+        })|raw -}}
+        {% if datetime is not defined or not datetime -%}
+            </div>
+        {%- endif -%}
+    {% endif %}
+{%- endblock date_widget %}
+
+{% block time_widget -%}
+    {% if widget == 'single_text' %}
+        {{- block('form_widget_simple') -}}
+    {% else -%}
+        {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-inline')|trim}) -%}
+        {% if datetime is not defined or false == datetime -%}
+            <div {{ block('widget_container_attributes') -}}>
+        {%- endif -%}
+        {{- form_widget(form.hour) }}{% if with_minutes %}:{{ form_widget(form.minute) }}{% endif %}{% if with_seconds %}:{{ form_widget(form.second) }}{% endif %}
+        {% if datetime is not defined or false == datetime -%}
+            </div>
+        {%- endif -%}
+    {% endif %}
+{%- endblock time_widget %}
+
+{% block choice_widget_collapsed -%}
+    {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-control')|trim}) %}
+    {{- parent() -}}
+{%- endblock %}
+
+{% block choice_widget_expanded -%}
+    {% if '-inline' in label_attr.class|default('') -%}
+        <div class="control-group">
+            {%- for child in form %}
+                {{- form_widget(child, {
+                    parent_label_class: label_attr.class|default(''),
+                    translation_domain: choice_translation_domain,
+                }) -}}
+            {% endfor -%}
+        </div>
+    {%- else -%}
+        <div {{ block('widget_container_attributes') }}>
+            {%- for child in form %}
+                {{- form_widget(child, {
+                    parent_label_class: label_attr.class|default(''),
+                    translation_domain: choice_translation_domain,
+                }) -}}
+            {% endfor -%}
+        </div>
+    {%- endif %}
+{%- endblock choice_widget_expanded %}
+
+{% block checkbox_widget -%}
+    {%- set parent_label_class = parent_label_class|default(label_attr.class|default('')) -%}
+    {% if 'checkbox-inline' in parent_label_class %}
+        {{- form_label(form, null, { widget: parent() }) -}}
+    {% else -%}
+        <div class="checkbox">
+            {{- form_label(form, null, { widget: parent() }) -}}
+        </div>
+    {%- endif %}
+{%- endblock checkbox_widget %}
+
+{% block radio_widget -%}
+    {%- set parent_label_class = parent_label_class|default(label_attr.class|default('')) -%}
+    {% if 'radio-inline' in parent_label_class %}
+        {{- form_label(form, null, { widget: parent() }) -}}
+    {% else -%}
+        <div class="radio{% if checked %} checked{% endif %}">
+            <span class="icons"><span class="first-icon fa fa-circle-o"></span><span
+                        class="second-icon fa fa-dot-circle-o"></span></span>
+            {{- form_label(form, null, { widget: parent() }) -}}
+        </div>
+    {%- endif %}
+{%- endblock radio_widget %}
+
+{# Labels #}
+
+{% block form_label -%}
+    {%- set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' control-label')|trim}) -%}
+    {{- parent() -}}
+{%- endblock form_label %}
+
+{% block choice_label -%}
+    {# remove the checkbox-inline and radio-inline class, it's only useful for embed labels #}
+    {%- set label_attr = label_attr|merge({class: label_attr.class|default('')|replace({'checkbox-inline': '', 'radio-inline': ''})|trim}) -%}
+    {{- block('form_label') -}}
+{% endblock %}
+
+{% block checkbox_label -%}
+    {{- block('checkbox_radio_label') -}}
+{%- endblock checkbox_label %}
+
+{% block radio_label -%}
+    {{- block('checkbox_radio_label') -}}
+{%- endblock radio_label %}
+
+{% block checkbox_radio_label %}
+    {# Do not display the label if widget is not defined in order to prevent double label rendering #}
+    {% if widget is defined %}
+        {% if required %}
+            {% set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' required')|trim}) %}
+        {% endif %}
+        {% if parent_label_class is defined %}
+            {% set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' ' ~ parent_label_class)|trim}) %}
+        {% endif %}
+        {% if label is not same as(false) and label is empty %}
+            {%- if label_format is not empty -%}
+                {% set label = label_format|replace({
+                '%name%': name,
+                '%id%': id,
+                }) %}
+            {%- else -%}
+                {% set label = name|humanize %}
+            {%- endif -%}
+        {% endif %}
+        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>
+        {{- widget|raw }} {{ label is not same as(false) ? (translation_domain is same as(false) ? label : label|trans({}, translation_domain)) -}}
+        </label>
+    {% endif %}
+{% endblock checkbox_radio_label %}
+
+{# Rows #}
+
+{% block button_row -%}
+    <div class="form-group">
+        {{- form_widget(form) -}}
+    </div>
+{%- endblock button_row %}
+
+{% block choice_row -%}
+    {% set force_error = true %}
+    {{- block('form_row') }}
+{%- endblock choice_row %}
+
+{% block date_row -%}
+    {% set force_error = true %}
+    {{- block('form_row') }}
+{%- endblock date_row %}
+
+{% block time_row -%}
+    {% set force_error = true %}
+    {{- block('form_row') }}
+{%- endblock time_row %}
+
+{% block datetime_row -%}
+    {% set force_error = true %}
+    {{- block('form_row') }}
+{%- endblock datetime_row %}
+
+{% block checkbox_row -%}
+    <div class="form-group{% if not valid %} has-error{% endif %}">
+        {{- form_widget(form) -}}
+        {{- form_errors(form) -}}
+    </div>
+{%- endblock checkbox_row %}
+
+{% block radio_row -%}
+    <div class="form-group{% if not valid %} has-error{% endif %}">
+        {{- form_widget(form) -}}
+        {{- form_errors(form) -}}
+    </div>
+{%- endblock radio_row %}
+
+{# Errors #}
+
+{% block form_errors -%}
+    {% if errors|length > 0 -%}
+        {% if form.parent %}<span class="help-block">{% else %}<div class="alert alert-danger">{% endif %}
+        <ul class="list-unstyled">
+        {%- for error in errors -%}
+            <li><span class="glyphicon glyphicon-exclamation-sign"></span> {{ error.message }}</li>
+        {%- endfor -%}
+    </ul>
+        {% if form.parent %}</span>{% else %}</div>{% endif %}
+    {%- endif %}
+{%- endblock form_errors %}
