correction media, recuperation contenu des sous-categories

--- a/src/CMS/Bundle/MenuBundle/Resources/views/Entry/new.html.twig
+++ b/src/CMS/Bundle/MenuBundle/Resources/views/Entry/new.html.twig
@@ -8,6 +8,7 @@
 				{{ form_start(form) }}
 				{{ form_rest(form) }}
 				{{ form_end(form) }}
+                <div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
