--- a/web/templates/Borderland/category.html.twig
+++ b/web/templates/Borderland/category.html.twig
@@ -3,11 +3,12 @@
     <div class="nav-category-outer">
         <div class="nav-category-holder">
             <ul class="nav nav-category">
+                <li><a href="javascript:" data-filter="*">Accueil</a></li>
                 {% for cat in categories %}
-                    {% if cat.id == category.id %}
+                    {% if category is defined and cat.id == category.id %}
                         <li><span>{{ cat.title }}</span></li>
                     {% else %}
-                        <li><a href="{{ path('front_single', {'alias': cat.url}) }}">{{ cat.title }}</a></li>
+                        <li><a href="javascript:" data-filter=".{{ cat.url }}">{{ cat.title }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
@@ -16,16 +17,18 @@
 
     <div class="section">
         {% for content in contents %}
-            <article>
+            <article class="element-item {{ content.getCategoriesClass() }}">
                 <div class="article-holder">
                     <div class="text-article">
                         <div class="text-centerer">
                             <div class="text-inner">
                                 <h5>{{ content.title }}</h5>
+                                <span class="separator"></span>
+                                <span class="project_category">{{ content.getCategoriesArticle() }}</span>
                             </div>
                         </div>
                     </div>
-                    <a href="" class="link-article"></a>
+                    <a href="{{ path('front_single', {'alias': content.url}) }}" class="link-article"></a>
                     <div class="image-shader"></div>
                     <div class="image-article">
                         <span class="image"><img src="{{ content.thumbnail.getWebPathSize("medium") }}"
