--- a/src/CMS/Bundle/MenuBundle/Resources/views/Entry/edit.html.twig
+++ b/src/CMS/Bundle/MenuBundle/Resources/views/Entry/edit.html.twig
@@ -8,6 +8,7 @@
 				{{ form_start(edit_form) }}
 				{{ form_rest(edit_form) }}
 				{{ form_end(edit_form) }}
+                <div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
