--- a/templates/Borderland/footer.html.twig
+++ b/templates/Borderland/footer.html.twig
@@ -6,7 +6,6 @@
     </div>
 </nav>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
 <script>
     // Look for .hamburger
     var hamburgers = $(".hamburger");
@@ -30,20 +29,19 @@
 
     })
 
-    // external js: isotope.pkgd.js
-
-    // init Isotope
-    var $grid = $('.section').isotope({
-        itemSelector: '.element-item',
-        layoutMode: 'fitRows'
+    var link_parents = $('.menu-parent > a');
+    link_parents.on('click', function(e) {
+        var $this = $(this);
+        if (!$this.parent().hasClass('opened')) {
+            e.preventDefault();
+            $this.parent('li').find('ul.menu-items-children').toggle('slide');
+            $this.parent('li').addClass('opened');
+        }
     });
 
-    // bind filter button click
-    $('.nav-category > li > a').on( 'click', function() {
-        var filterValue = $( this ).attr('data-filter');
-        console.log(filterValue);
-        $grid.isotope({ filter: filterValue });
-    });
+
+
+
 
 </script>
 </body>
