--- a/templates/Borderland/style.css
+++ b/templates/Borderland/style.css
@@ -55,6 +55,11 @@ h1 {
     line-height: 50px;
 }
 
+.bordered {
+    padding: 5px;
+    border: 2px solid #fff;
+}
+
 #map {
 	width: 100%;
 	height: 300px;
@@ -161,6 +166,30 @@ button.hamburger {
 
 .menu-items-children.in {
     display: block;
+}
+
+
+/***********************
+ * FOOTER
+ ***********************/
+footer {
+    background-color: #121212;
+    color: #fff;
+    height: 115px;
+}
+
+.footer-inner {
+    padding:75px 34px 65px 34px;
+    margin-top: 20px;
+}
+
+footer a {
+    color: #868686;
+    text-transform: uppercase;
+}
+
+footer a:hover {
+    color: #fff;
 }
 
 .img-responsive {
