--- a/templates/Borderland/footer.html.twig
+++ b/templates/Borderland/footer.html.twig
@@ -2,7 +2,7 @@
 <nav id="main-nav">
     <div class="container">
         <h4 class="dancing">Partir c'est crever un pneu</h4>
-        {{ render_menu('menu-principal') }}
+        {{ render_menu('header') }}
     </div>
 </nav>
 
@@ -13,7 +13,7 @@
         </div>
         <div class="col-6"></div>
         <div class="col-3">
-
+            {{ render_menu('footer') }}
         </div>
     </div>
 </footer>
