--- a/web/templates/Borderland/single.html.twig
+++ b/web/templates/Borderland/single.html.twig
@@ -1,14 +1,20 @@
 {% include "@cms/Borderland/header.html.twig" %}
     <div class="container">
+        <div class="dancing pull-left">
+            {{ content.created|date(date_format) }} | dans {{ content.getCategoriesArticle(',') }} | par {{ content.author }}
+        </div>
+        <div class="clearfix"></div>
         <h1>{{ content.title }}</h1>
         <div class="section">
-	        <div class="col-9">
+	        <div class="col col-8">
 	            {{ content.description|raw }}
 	        </div>
 
-	        <div class="col-3">
+	        <div class="col col-4">
 	            {{ content.get('carte')|raw }}
 	        </div>
+            <div class="clearfix"></div>
         </div>
+        <div class="clearfix"></div>
     </div>
 {% include "@cms/Borderland/footer.html.twig" %}
