--- a/templates/Borderland/single.html.twig
+++ b/templates/Borderland/single.html.twig
@@ -9,6 +9,7 @@
                 <div class="clearfix"></div>
                 <h1>{{ content.title }}</h1>
 	            {{ content.description|raw }}
+                {{ social_buttons() }}
 	        </div>
 
 	        <div class="col col-4">
