--- a/web/templates/Borderland/header.html.twig
+++ b/web/templates/Borderland/header.html.twig
@@ -8,6 +8,7 @@
     <title>{{ title }}</title>
     <link href='//fonts.googleapis.com/css?family=Raleway:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CDancing+Script:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CLato:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CRaleway:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CDancing+Script:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%26subset%3Dlatin%2Clatin-ext' rel='stylesheet' type='text/css' />
 
+    <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/hamburgers.css') }}">
     <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/style.css') }}">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
