--- a/web/templates/Borderland/single.html.twig
+++ b/web/templates/Borderland/single.html.twig
@@ -15,6 +15,7 @@
 	        <div class="col col-4">
 	            {{ content.get('carte')|raw }}
                 {{ content.get('meteo')|raw }}
+                {{ content.get('spotify')|raw }}
 	        </div>
             <div class="clearfix"></div>
         </div>
