--- a/web/templates/Borderland/style.css
+++ b/web/templates/Borderland/style.css
@@ -295,6 +295,54 @@ footer .logo {
     margin-right: 0;
 }
 
+.spotify audio {
+    display: none;
+}
+
+.spotify .track {
+    margin-bottom: 5px;
+}
+
+.spotify .track .infos {
+    float: left;
+    width: 78%;
+}
+
+.spotify img {
+    display: block;
+    float: left;
+}
+
+.spotify span {
+    display: inline-block;
+    font-size: 12px;
+    line-height: 45px;
+}
+
+.spotify span.track-name {
+    padding-left: 10px;
+}
+
+.spotify .audio {
+    font-size: 12px;
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.spotify .audio .song-slider-back {
+    background-color: #ccc;
+    height: 10px;
+    width: 63%;
+    position: relative;
+    margin: 5px 10px 0;
+}
+
+.spotify .audio .song-slider {
+    background-color: #000;
+    height: 12px;
+    position: absolute;
+}
+
 /**********************
  * Category
  **********************/
