--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -124,7 +124,7 @@
                     <div class="col-md-4">{{ form_row(form.longitude) }}</div>
                     <div class="col-md-1">
                         <div class="form-group"><label class="form-label">&nbsp;</label><a
-                                    href="javascript:codeAddress()" class="btn btn-fill form-control">OK</a></div>
+                                    href="javascript:codeAddress('{{ form.address.vars.id }}', '{{ form.latitude.vars.id }}', '{{ form.longitude.vars.id }}')" class="btn btn-fill form-control">OK</a></div>
                     </div>
                 </div>
             </div>
@@ -177,12 +177,33 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <div class="spotify"></div>
+                <div class="music"></div>
             </div>
         </div>
     {% endspaceless %}
     <script src="{{ asset('/bundles/content/js/spotify.js') }}"></script>
 {% endblock spotify_widget %}
+
+
+{% block deezer_widget %}
+    {% spaceless %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-11">{{ form_row(form.artist) }}</div>
+                    <div class="col-md-1">
+                        <div class="form-group"><label class="form-label">&nbsp;</label><a
+                                    href="javascript:search()" class="btn btn-fill form-control">OK</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="music"></div>
+            </div>
+        </div>
+    {% endspaceless %}
+    <script src="{{ asset('/bundles/content/js/deezer.js') }}"></script>
+{% endblock deezer_widget %}
 
 {% use "form_div_layout.html.twig" %}
 
