--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/spotify.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/spotify.html.twig
@@ -1,6 +1,6 @@
 {% if value is defined and value.artist is defined %}
 <h4>{{ title }}</h4>
-<div class="spotify"></div>
+<div class="music"></div>
 <script type="text/javascript" src="{{ asset('bundles/content/js/spotify.js') }}"></script>
 <script type="text/javascript">
     $(document).ready(function() {
