--- a/src/CMS/Bundle/CoreBundle/Resources/views/Twig/social.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Twig/social.html.twig
@@ -1,13 +1,9 @@
 {% if url is defined %}
     <div class="social">
         {{ 'cms.core.share'|trans }} :
-        <a href="https://facebook.com/sharer/sharer.php?u={{ url }}" target="_blank" rel="noopener"><i
-                    class="fa fa-facebook"></i></a>
-        <a href=https://twitter.com/intent/tweet/?url={{ url }}" target="_blank" rel="noopener"><i
-                    class="fa fa-twitter"></i></a>
-        <a href="https://plus.google.com/share?url={{ url }}" target="_blank" rel="noopener"><i
-                    class="fa fa-google-plus-official"></i></a>
-        <a href="https://pinteret.com/pin/create/button/?url={{ url }}" target="_blank" rel="noopener"><i
-                    class="fa fa-pinterest"></i></a>
+        <a href="https://facebook.com/sharer/sharer.php?u={{ url }}" target="_blank" rel="noopener"><img src="{{ asset('bundles/core/images/facebook.svg') }}" width="16" /></a>
+        <a href=https://twitter.com/intent/tweet/?url={{ url }}" target="_blank" rel="noopener"><img src="{{ asset('bundles/core/images/twitter.svg') }}" width="16" /></a>
+        <a href="https://plus.google.com/share?url={{ url }}" target="_blank" rel="noopener"><img src="{{ asset('bundles/core/images/gplus.svg') }}" width="16" /></a>
+        <a href="https://pinteret.com/pin/create/button/?url={{ url }}" target="_blank" rel="noopener"><img src="{{ asset('bundles/core/images/pinterest.svg') }}" width="16" /></a>
     </div>
 {% endif %}
