--- a/src/CMS/Bundle/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/CMS/Bundle/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -43,4 +43,21 @@
 		</div>
 	</div>
 </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="header"></div>
+                <div class="content">
+                    <div id="stats-content">
+                        <canvas id="doughnut"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="{{ asset('bundles/content/js/stats.js') }}"></script>
 {% endblock body %}
+
+
