--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -9664,42 +9664,42 @@ star {
     }
 }
 
-.spotify audio {
+.music audio {
     display: none;
 }
 
-.spotify .track {
+.music .track {
     margin-bottom: 5px;
 }
 
-.spotify .track .infos {
+.music .track .infos {
     float: left;
     width: 78%;
 }
 
-.spotify img {
+.music img {
     display: block;
     float: left;
 }
 
-.spotify span {
+.music span {
     display: inline-block;
     font-size: 12px;
     line-height: 45px;
 }
 
-.spotify span.track-name {
+.music span.track-name {
     padding-left: 10px;
 }
 
-.spotify .audio {
+.audio {
     font-size: 12px;
     display: flex;
     flex-flow: row nowrap;
     padding-left: 5px;
 }
 
-.spotify .audio .song-slider-back {
+.audio .song-slider-back {
     background-color: #ccc;
     height: 6px;
     width: 59%;
@@ -9707,8 +9707,12 @@ star {
     margin: 4px 10px 0;
 }
 
-.spotify .audio .song-slider {
+.audio .song-slider {
     background-color: #000;
     height: 12px;
     position: absolute;
+}
+
+.form-group {
+    position: relative;
 }
