--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -163,6 +163,40 @@
     <script src="{{ asset('/bundles/content/js/weather.js') }}"></script>
 {% endblock weather_widget %}
 
+{% block gallery_widget %}
+    {% spaceless %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-12">{{ form_row(form.gallery) }}</div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <a class="gallery" data-toggle="modal" data-target="#{{ id }}_modal_gallery"></a>
+                <div class="modal fade modal-gallery" id="{{ id }}_modal_gallery" tabindex="-1" role="dialog" aria-labelledby="{{ id }}">
+                    <div class="modal-dialog modal-large" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                            aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Médias</h4>
+                            </div>
+                            <div class="modal-body">
+                            </div>
+                            <div class="modal-footer">
+                                <a href="javascript:saveGallery()" class="btn btn-fill btn-info">Ajouter</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    {% endspaceless %}
+
+    <script src="{{ asset('/bundles/content/js/gallery.js') }}"></script>
+{% endblock gallery_widget %}
+
 
 {% block spotify_widget %}
     {% spaceless %}
