--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -9716,3 +9716,16 @@ star {
 .form-group {
     position: relative;
 }
+
+.gallery {
+    display: block;
+    height: 200px;
+    border: dotted 2px grey;
+}
+
+.thumbnail.active {
+    border-color: #c9dae1;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
