--- a/src/CMS/Bundle/ContentBundle/Resources/views/ContentTaxonomy/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/ContentTaxonomy/edit.html.twig
@@ -18,7 +18,7 @@
 		    <div class="alert alert-callout alert-success" role="alert">{{ flashMessage|trans }}</div>
 		{% endfor %}
 		<div class="card">
-			<div class="card-body">{{ form(edit_form) }}</div>
+			<div class="content">{{ form(edit_form) }}</div>
 		</div>
 	</div>
 {% endblock %}
