--- a/templates/Borderland/header.html.twig
+++ b/templates/Borderland/header.html.twig
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/hamburgers.css') }}">
+    <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/loader.css') }}">
     <link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/style.css') }}">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
@@ -18,6 +19,11 @@
 <body>
 <div id="wrapper">
     <header id="main-header" data-background="{% if content is defined and content.thumbnail is not null %}{{ content.thumbnail.webPath }}{% elseif category is defined and category.banner is not null %}{{ category.webPath }}{% else %}{{ getOption('banner') }}{% endif %}">
+        <div id="logo">
+            <a href="{{ path('home') }}" class="logo">
+                <span class="bordered">TRAVELCLOUD</span>
+            </a>
+        </div>
         <div class="pull-right">
             <button class="hamburger hamburger--elastic" type="button">
                 <span class="hamburger-box">
