--- a/web/templates/Borderland/single-spectacles.html.twig
+++ b/web/templates/Borderland/single-spectacles.html.twig
@@ -1,27 +1,43 @@
 {% include "@cms/Borderland/header.html.twig" %}
-<div class="container">
+<div class="container-category">
+    <div class="container">
 
-    <div class="section">
-        <div class="col col-8">
-            <div class="dancing pull-left">
-                {{ content.created|date(date_format) }} | dans {{ content.getCategoriesArticle(',') }} | par {{ content.author }}
+        <div class="container-inner">
+            <div class="col col-9">
+                <div class="dancing pull-left">
+                    {{ content.created|date(date_format) }} | dans {{ content.getCategoriesArticle(',') }} |
+                    par {{ content.author }}
+                </div>
+
+                <div class="clearfix"></div>
+                <h1>{{ content.title }}</h1>
+                {{ social_buttons() }}
+                <div class="clearfix"></div>
+                <div class="description">
+                    {{ content.description|raw }}
+                </div>
+
+                {{ content.get('musique')|raw }}
+            </div>
+            <div class="col col-3">
+                <div class="custom-field">
+                    <h5>Date</h5>
+                    <p>{{ content.get('date-du-concert')|raw }}</p>
+                </div>
+                <div class="custom-field">
+                    <h5>Tarif</h5>
+                    <p>{{ content.get('tarif') }}</p>
+                </div>
+                <div class="custom-field">
+                    {{ content.get('salle-de-spectacle')|raw }}
+                </div>
+                <div class="custom-field">
+                    {{ content.get('galerie-photo')|raw }}
+                </div>
             </div>
             <div class="clearfix"></div>
-            <h1>{{ content.title }}</h1>
-            {{ content.description|raw }}
-            {{ content.get('musique')|raw }}
-            {{ social_buttons() }}
-        </div>
-        <div class="col col-4">
-            <h3>Infos</h3>
-            <ul class="list-unstyled">
-                <li>Date : {{ content.get('date-du-concert')|raw }}</li>
-                <li>Tarif : {{ content.get('tarif') }}</li>
-            </ul>
-            {{ content.get('salle-de-spectacle')|raw }}
         </div>
         <div class="clearfix"></div>
     </div>
-    <div class="clearfix"></div>
 </div>
 {% include "@cms/Borderland/footer.html.twig" %}
