--- a/web/templates/Borderland/single-spectacles.html.twig
+++ b/web/templates/Borderland/single-spectacles.html.twig
@@ -9,6 +9,7 @@
             <div class="clearfix"></div>
             <h1>{{ content.title }}</h1>
             {{ content.description|raw }}
+            {{ content.get('galerie')|raw }}
             {{ content.get('musique')|raw }}
             {{ social_buttons() }}
         </div>
