--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
@@ -2,7 +2,7 @@
 <div class="section">
 {% for medium in value %}
     <div class="col-2">
-        <img src="{{ asset(medium.webPathList) }}" />
+        <img src="{{ asset(medium.webPathList) }}" class="img-responsive" />
     </div>
 {% endfor %}
     </div>
