--- a/web/templates/Borderland/category.html.twig
+++ b/web/templates/Borderland/category.html.twig
@@ -32,10 +32,15 @@
                     <a href="{{ path('front_single', {'alias': content.url}) }}" class="link-article"></a>
                     <div class="image-shader"></div>
                     <div class="image-article">
-                        <span class="image"><img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
+
+                        <span class="image">
+                            {% if content.thumbnail is defined and content.thumbnail is not null %}
+                            <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
                                                  class="img-responsive"
                                                  alt="{{ content.thumbnail.metas['alt_1'] }}"
-                                                 title="{{ content.thumbnail.metas['title_1'] }}"></span>
+                                                 title="{{ content.thumbnail.metas['title_1'] }}">
+                            {% endif %}
+                        </span>
                     </div>
                 </div>
             </article>
